[tool.poetry]
name = "starlette-loguru-middleware"
version = "0.1.0"
description = ""
authors = ["Hossein Sokhandan <iamsokhandan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.6.0"
fastapi = "^0.74.1"
black = "^22.1.0"
pytest = "^7.0.1"
requests = "^2.27.1"
anyio = {extras = ["trio"], version = "^3.5.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
